css/custom.css
/* ... */
/* An invisible hitbox to max volume */
#volumeMax {
	width:3px;
	height: 17px;
}

/*html.touchevents .optionsbox {
	top: auto;
	left: 0;
	right: 0;
	bottom: 1vh;

	margin: 0 2.5vw;

	/*flex-direction: row;*/
/*}*/

.optionsbox {
	display: flex;
	flex-direction: column;
	justify-content: space-around;
/*
	border-width: 2px;
	border-style: solid;*/
}

html.touchevents section label /* to expand the hitbox */
{
	display: flex;
	flex: 1 1 auto;
	justify-content: center;

	padding: 2vh 0;
}

section label {
	padding: 5px 0;
}

html.touchevents section>div {
	margin: 0.5vh 1vw;
}

section>div {
	display: flex;
	flex: 1 1 auto;

	margin: 3px 10px;

	justify-content: space-around;
}

.optionsbox .topcoat-checkbox__checkmark,
.optionsbox input:first-child
{ margin-right: 10px; }

.optionsbox select:first-child
{ margin-left: 10px; }

section, .sep { /* width big when horizontal, some amount of separation when vertical, change border edge */ }

section {
	display: flex;
	justify-content: space-around;
	flex-wrap: wrap;

	padding: 3px 10px;
}

html.touchevents section {
	flex-direction: row;
}

/*html.touchevents .sep {
	width: 93vw;
}*/

.sep {
	border-bottom-width: 1px;
	border-bottom-style: solid;

	margin: 5px 10px;
	height: 0;
}

.optionsbox span { text-align:center; }

/* Styles for the second pane */

.playlist-container {
	flex: 1 1 auto;
	position:relative;
	height: 100%;
	overflow:hidden;
}

.playlist {  position: relative; overflow:hidden; height: 100%; }

.playlist>li {
	padding: 0 10px;
	line-height: 22px;
	font-size: 12px;
	overflow: visible; /* make this one big long pane */

	top:0;

	border-bottom-width: 1px;
	border-bottom-style: solid;
}

header h1 { display: flex; flex: 1 1 auto; }


/* Items that do grow and shrink */
.playlist-container {
	flex: 1 1 0;
}

.infopane-h, .infopane-v {
	display: flex;
	flex: 1 1 auto;
}

.infopane-h {
	flex-direction: row;
	padding: 0.5vh 1vw;
}

.infopane-v {
	flex-direction: column;
	padding: 1vh 0.5vw;
}



#messagebox {
	position: absolute;
	z-index: 5;
	top: -35px;
	margin: 0 auto;
	text-align: center;
	padding: 15px;
	color: #DDD;
	line-height: 1.125rem;

}
.mboxsuccess { border: 1px solid #29FF19; background-color: rgba(41,255,25,0.25); }
.mboxerror { border: 1px solid #E60009; background-color: rgba(247,40,49,0.25); }
.mboxinfo { border: 1px solid #8BD5EA; background-color: rgba(53,209,255,0.25); }
.closebutton { position: absolute; top: 3px; right: 3px; }


/* Overrides on Topcoat */
.topcoat-list__container { overflow-y: scroll; }
.topcoat-list__item{ padding: 0.75rem 1.75rem; }
.topcoat-switch { z-index: 1; }
.topcoat-range { margin-top: .5em; width: 100%; }
.topcoat-button-bar__item:first-child .topcoat-button--large--cta { border-top-right-radius: 0; border-bottom-right-radius:0; } /* fix CTA on button bar */
.topcoat-button-bar__item:last-child .topcoat-button--large--cta { border-top-left-radius: 0; border-bottom-left-radius:0; }

.topcoat-button-bar__item > .topcoat-button-bar__button:not(:first-child),
.topcoat-button-bar__item > .topcoat-button-bar__button--large:not(:first-child)
{ border-left: 0; }

.topcoat-button-bar__item:last-child > .topcoat-button-bar__button:not(:last-child),
.topcoat-button-bar__item:last-child > .topcoat-button-bar__button--large:not(:last-child)
{ border-right: 0; }

.btnmiddle { border-left: 0; border-right: 0; } /* odd that this would need to be overridden */
legend { color: #DADADA; }

/* This is removed by UnCSS, even with ignores. This SHOULD be temporary. */
@keyframes moveIn {
  to {
    opacity: 1;
    transform: translateX(0); } }


h2 { margin: 0; } /* Firefox, wtf? */

h5, h6 {
	margin: 0;
	font-weight: 400;
	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
}

h5 {
	color: #555;
}

h6 {
	font-size: 0.9em;
	color: #656565;
}

input[type=number] {
    width: 3rem;
}

/* Syntax highlighting */
pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
.string { color: green; }
.number { color: darkorange; }
.boolean { color: blue; }
.null { color: magenta; }
.key { color: red; }

/* Cordon overlay */
.cordon { position: relative; }
.cordon:before {
	position:absolute;
	content: 'Under Construction';
	width: 100%;
	height: 100%;
	background-image: url("../img/ui/ui-bg_diagonals-thick_15_0b3e6f_40x40.png");
	opacity: 0.35;
	color: #FCFF63;
	text-transform: uppercase;
	text-align: center;
	font-weight: bolder;
}

span.label { font-weight: bold; }
span.value { font-style: italic; }

.labelsmall {
	margin: 0;
	font-style: italic;
	font-size: 85%;
	color: #888; /* add text-shadow on non-mobiles */
}

/* styles for the slider bar */
.measuremarks {
	position: relative;
	margin: 0 7px;
	display: flex;
	height: 1rem;
}

.measuremarks>div {
	position: relative;
	flex-grow: 1;
	height:5px;
	border-right: 1px solid #444;
}

.measuremarks>div:first-of-type {
	border-left: 1px solid #444;
}

/* the numbers */
.measuremarks span {
	position: absolute;
	font-size: 75%;
	font-style: italic;
	top: 100%;
}
.measuremarks>span {
	left: -0.25rem; /* the minimum mark */
	top: 5px; /* same as height */
}
.measuremarks>div>span {
	right: -0.25rem;
}


.shade {
	animate: all;
	animation: unflip 0.5s ease-in-out;
	animation-fill-mode:forwards;
/*
	background-image: url("../img/checkbox_unchecked_dark.png");
*/
}
.expandedbutton { width: 16px; right: 4px; background-image: url("../img/checkbox_checked_dark.png"); }

.flip {
	transform: translate3d(0,0,0);
	animation: flip 0.5s ease-in-out;
	animation-fill-mode:forwards;
}

@keyframes flip {
	0% { transform: rotateZ(0deg); }
	100% { transform: rotateZ(180deg); }
}

@keyframes unflip {
	0% { transform: rotateZ(180deg); }
	100% { transform: rotateZ(360deg); }
}

.no-animation {
	animation: none;
}

.hidden {
	display: none;
	visibility: hidden;
}

